# BirdCLEFplus_2025

./: .gitignore  README.md  initialize_project.sh  main.py  pyproject.toml  setup.sh  test.sh  test_1.sh  test_2.sh  test_3.sh
configs/: 001-1.yaml  001-2.yaml  001-3.yaml  001-4.yaml  001-5.yaml  001-6.yaml  001-7.yaml  001-8.yaml  001.yaml  002-1.yaml  002-2.yaml  002-3.yaml  002-4.yaml  002-5.yaml  002-6.yaml  002-7.yaml  002.yaml  003-13.yaml  003-17.yaml  003-18.yaml  004-13.yaml  004-17.yaml  004-18.yaml  005-1.yaml  005-10.yaml  005-2.yaml  005-3.yaml  005-4.yaml  005-5.yaml  005-6.yaml  005-7.yaml  005-8.yaml  005-9.yaml  006-1.yaml  006-2.yaml  006-3.yaml  006-4.yaml  011-1.yaml  011-2.yaml  011-3.yaml  (+85 more)
notebooks/: audio_data_filtering.ipynb  efficientnet-b0-pytorch-train-birdclef-25.ipynb  transforming-audio-to-mel-spec-birdclef-25.ipynb
scripts/: train.py
src/: audio_processing.py  config.py  data_precomputation.py  dataset.py  train.py  utils.py
