[project]
name = "birdclefplus-2025"
author = ["Nikita Detkov"]
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kaggle>=1.7.4.5",
    "librosa>=0.11.0",
    "numpy>=2.2.5",
    "opencv-python-headless>=4.11.0.86",
    "pandas>=2.2.3",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "timm>=1.0.15",
    "wandb>=0.19.11",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
]

[[tool.uv.index]]
name = "torch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "torch-cu128", marker = "sys_platform == 'linux'" },
    { index = "torch-cpu", marker = "sys_platform == 'darwin'" }
]

torchvision = [
    { index = "torch-cu128", marker = "sys_platform == 'linux'" },
    { index = "torch-cpu", marker = "sys_platform == 'darwin'" }
]
